# real-time-prediction-of-crypto-prices

./: .gitignore
docker-compose/: Makefile  backfill_pipeline.yml  feature_pipeline.yml
services/: config.py
services/feature_dashboard/: Makefile  pyproject.toml
services/feature_dashboard/src/: backend.py  dashboard_config.py  frontend.py  plot.py
services/feature_pipeline/feature_dashboard/: Makefile
services/feature_pipeline/feature_dashboard/src/: backend.py  dashboard_config.py  plot.py
services/feature_pipeline/kafka_to_feature_store/: Dockerfile  pyproject.toml
services/feature_pipeline/kafka_to_feature_store/src/: hopsworks_api.py  hopsworks_config.py  main.py
services/feature_pipeline/trade_producer/: Dockerfile  Makefile
services/feature_pipeline/trade_producer/src/: main.py
services/feature_pipeline/trade_to_ohlc/: pyproject.toml
services/feature_pipeline/trade_to_ohlc/src/: main.py
services/feature_pipeline/training_data_generation/src/: generator.py  preprocessing.py  splitting.py
services/kafka_to_feature_store/: Makefile  pyproject.toml
services/kafka_to_feature_store/src/: config.py  feature_store_config.py  hopsworks_api.py  hopsworks_config.py  main.py
services/trade_producer/: .gitignore  Dockerfile  Makefile  pyproject.toml
services/trade_producer/src/: config.py  kraken_api.py  main.py  producer_config.py
services/trade_to_ohlc/: Dockerfile  Makefile  pyproject.toml
services/trade_to_ohlc/src/: candle_config.py  candles_config.py  config.py  main.py  ohlc_config.py
tooling/src/: feature_reader.py
