[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Kobina Brandon <maadabrandon@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
streamlit = "^1.36.0"
hopsworks = "^3.7.0"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.3.4"
bokeh = "2.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
