[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pydantic-settings = "^2.3.1"
quixstreams = "^2.5.1"
loguru = "^0.7.2"
hopsworks = "^3.7.0"
pandas = "2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
